# spoonbill-web

./: .coveragerc  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_django  Dockerfile_static  README.md  docker-compose.deploy.yaml  docker-compose.maintenance-off.yaml  docker-compose.maintenance.yaml  docker-compose.motd.yaml  docker-compose.test.yaml  docker-compose.yaml  manage.py  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  docs.yaml  extract.yaml  front.yaml  js.yml  pr-front.yaml  pr.yaml  push.yaml
.tx/: config
core/: __init__.py  asgi.py  celery.py  column_headings.py  constants.py  consumers.py  file_storage.py  models.py  routing.py  serializers.py  settings.py  tasks.py  urls.py  utils.py  validators.py  views.py
core/data/: ocds_lite_config.json
core/migrations/: 0001_initial.py  0002_auto_20210310_1049.py  0003_auto_20210310_1117.py  0004_auto_20210310_1121.py  0005_auto_20210310_1125.py  0006_auto_20210310_1259.py  0007_auto_20210311_1308.py  0008_upload_status.py  0009_url.py  0010_auto_20210317_1024.py  0011_auto_20210317_1137.py  0012_auto_20210318_1411.py  0013_auto_20210318_1415.py  (+39 more)
frontend/: .env  .env.test  .eslintrc.js  .prettierrc.js  Dockerfile  README.md  babel.config.js  default.conf  jest.config.js  jest.setup.js  knip.jsonc  messages.pot  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vue.config.js  web-app-ui.pot
spoonbill_web/: __init__.py  apps.py  asgi.py  celery.py  constants.py  file_storage.py  models.py  routing.py  serializers.py  settings.py  tasks.py  urls.py  utils.py  validators.py  views.py  wsgi.py
tests/: __init__.py  conftest.py  test_channels.py  test_file_storage.py  test_flattens.py  test_tables.py  test_tasks.py  test_upload.py  test_urls.py  test_utils.py  test_validators.py  utils.py
www-maintenance-override/: default.conf
www-motd/: default.conf
(+168 files in other folders)
