[project]
name = "spoonbill-web"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["E", "C4", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"*/management/commands/*" = ["INP001"]  # no __init__.py file
"*/migrations/*" = ["E501"]

[tool.coverage.run]
omit = ["*/migrations/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "spoonbill_web.settings"

[tool.uv.pip]
python-platform = "linux"  # greenlet
