[project]
name = "spoonbill-web"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1",
    "PTH",
    "TRY003",  # errors
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["D100", "INP001"]
"manage.py" = ["PLC0415"]
"{*/signals,*/views,*/migrations/*}.py" = ["ARG001"]
"{*/admin,*/routers,*/views,*/commands/*}.py" = ["ARG002"]
"{*/admin,*/forms,*/models,*/routers,*/migrations/*,tests/*}.py" = ["RUF012"]
"*/{serializers,views}.py" = ["RUF012"]
"*/migrations/*" = ["E501"]
"tests/*" = [
    "D", "FBT003", "INP001", "PLR2004", "PT", "S", "TRY003",
    "ARG001",  # mock
    "ARG002",  # mock
]

[tool.coverage.run]
omit = ["*/migrations/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'core.settings'

[tool.uv.pip]
python-platform = "linux"  # greenlet
